--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,8 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+# Local files(e.g. datasets, models, etc.)
+data/
+report/
+*.pth
